# llm-chat

./: .gitignore  LICENSE  README.md  docker-compose.yaml
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/src/app/: logger.py  main.py  schemas.py
frontend/: Dockerfile  docker-compose.yml  package-lock.json
frontend/src/: App.vue
frontend/src/components/: ChatView.vue
